fixed a little shift in the review container

--- a/src/pages/home/advertSection/index.module.css
+++ b/src/pages/home/advertSection/index.module.css
@@ -4,11 +4,11 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    padding: 170px 60px 0;
+    padding: 70px 60px 0;
     background-image: url("../../../assets/Rectangle 3206.svg");
     background-repeat: no-repeat;
     background-size: cover;
-    height: 1130px;
+    height: 1000px;
     margin-top: -50px;
 
     > p {
