--- a/src/pages/home/reviewsSection/index.module.css
+++ b/src/pages/home/reviewsSection/index.module.css
@@ -3,7 +3,7 @@
 .container {
     display: flex;
     flex-direction: column;
-    margin-top: -200px;
+    margin-top: -80px;
 }
 
 .innerContainerDiv {
@@ -19,7 +19,7 @@
     display: flex;
     justify-self: flex-end;
     align-self: end;
-    margin-top: -73.5px;
+    margin-top: -71px;
     z-index: 5;
     rotate: -2.5deg;
 }
